{{$NEXT}}

0.000039  2016-06-25 13:44:03-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Stop leaking temp files
    - clean up STDERR
    - Fix #28

0.000038  2016-06-25 13:20:07-07:00 America/Los_Angeles

    - No Changes from last TRIAL release

0.000037  2016-06-24 14:03:52-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Add all_keys() to Compare tools
    - add all_vals() to Compare tools
    - add all_items() to Compare tools
    - Fix in_set(DNE) (#10)
    - Add E()
    - Proper line reporting for shortcuts.

0.000036  2016-06-24 05:58:51-07:00 America/Los_Angeles

    - Better comments in SRAND (#7)

0.000035  2016-06-23 14:48:54-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Make it possible to provide a name to isa_ok, can_ok, and DOES_ok
    - Add some regression tests for previous fixes
    - Allow 'tests' and 'skip_all' prefixes support to plan() #25

0.000034  2016-06-22 11:30:00-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Bump minimum Test2 version

0.000033  2016-06-22 08:41:22-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix ClassicCompare to load deps (#23)

0.000032  2016-06-17 06:58:17-07:00 America/Los_Angeles

    - Add 'bag' comparison (dakkar)
    - Add 'call_list()' for DSL (dakkar)
    - Add 'call_hash()' for DSL (dakkar)

0.000031  2016-06-15 21:32:05-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix TODO to use pre-filters

0.000030  2016-05-09 07:55:17-07:00 America/Los_Angeles

    - Doc Changes

0.000029  2016-04-30 15:17:01-07:00 America/Los_Angeles

    - Doc updates from jkeroes
    - Doc updates from stevieb9
    - SRand now works without harness
    - Fix emails

0.000028  2016-04-15 14:32:30-07:00 America/Los_Angeles

    - Add Tools/Event gen_event()
    - Add Tools/Event to Extended bundle

0.000027  2016-04-13 20:22:17-07:00 America/Los_Angeles

    - Make some tests ignore custom formatters

0.000026  2016-04-05 11:11:35-07:00 America/Los_Angeles

    - Add OrderedSubset compare tools