@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Attempt a fix to Delta #29
+
 0.000039  2016-06-25 13:44:03-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Stop leaking temp files
